# Paketron

./: .gitignore
.specify/memory/: constitution.md
paketron/: .gitignore  Cargo.toml
paketron/src/: cli.rs  main.rs
paketron/src/commands/: install.rs  mod.rs  search.rs  uninstall.rs
paketron/src/core/: downloader.rs  installer.rs  mod.rs  npm.rs  package.rs  registry.rs
specs/001-paketron-core/: data-model.md  research.md  spec.md  tasks.md
specs/001-paketron-core/contracts/: cli.md
specs/002-paketron-web/: plan.md  spec.md  tasks.md
web/: index.html  package.json  tailwind.config.js
web/src/: App.jsx
web/src/components/: Footer.jsx  Navbar.jsx
web/src/components/search/: PackageList.jsx  SearchBar.jsx
web/src/components/ui/: Button.jsx  Card.jsx  DownloadButton.jsx  Input.jsx
web/src/pages/: Home.jsx
